force-app/main/default/objects/Referral_Config__mdt/Referral_Config__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata type to store configuration settings for the Employee Referral System</description>
    <label>Referral Config</label>
    <pluralLabel>Referral Configs</pluralLabel>
</CustomObject>