force-app/main/default/objects/Referral_Config__mdt/fields/Bonus_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Amount__c</fullName>
    <description>Default referral bonus amount in company currency</description>
    <inlineHelpText>The standard bonus amount paid for successful referrals</inlineHelpText>
    <label>Bonus Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>