force-app/main/default/objects/Referral_Config__mdt/fields/Enable_Auto_Close__c.field-meta.xml
<CustomField>
    <fullName>Enable_Auto_Close__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether expired job postings are automatically closed.</description>
    <inlineHelpText>Enable scheduled automation to close open jobs after the closing date.</inlineHelpText>
    <label>Enable Auto Close</label>
    <type>Checkbox</type>
</CustomField>