force-app/main/default/objects/Referral_Config__mdt/fields/Enable_Email_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Enable_Email_Notifications__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether email notifications are sent for referral status changes</description>
    <inlineHelpText>Enable or disable automated email notifications to employees about their referral status updates</inlineHelpText>
    <label>Enable Email Notifications</label>
    <type>Checkbox</type>
</CustomField>