force-app/main/default/objects/Referral_Config__mdt/fields/Max_Referrals_Per_Employee__c.field-meta.xml
<CustomField>
    <fullName>Max_Referrals_Per_Employee__c</fullName>
    <description>Maximum number of active referrals allowed per employee</description>
    <inlineHelpText>Set the limit for how many active referrals an employee can submit simultaneously (0 = unlimited)</inlineHelpText>
    <label>Max Referrals Per Employee</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>