force-app/main/default/objects/Referral_Config__mdt/fields/Recruiter_Assignment_Queue__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Assignment_Queue__c</fullName>
    <description>Developer name of the queue used for recruiter assignment workflows.</description>
    <inlineHelpText>Use the queue developer name, for example Referral_Recruiters.</inlineHelpText>
    <label>Recruiter Assignment Queue</label>
    <length>80</length>
    <type>Text</type>
</CustomField>